--- a/css/responsive.css
+++ b/css/responsive.css
@@ -1,54 +1,119 @@
-*{
-    box-sizing: border-box;
+* {
+  box-sizing: border-box;
 }
 
-body{
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
+body {
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 
 /* Desktop */
-.col-lg-1{width: 8.33%; }
-.col-lg-2{width: 16.66%; }
-.col-lg-3{width: 25%;}
-.col-lg-4{width: 33.33%;}
-.col-lg-5{width: 41.66%;}
-.col-lg-6{width: 50%;}
-.col-lg-7{width: 38.33%;}
-.col-lg-8{width: 66.66%;}
-.col-lg-9{width: 75%;}
-.col-lg-10{width: 83.33%;}
-.col-lg-11{width: 91.66%;}
-.col-lg-12{width: 100%;}
-
-[class*="col-lg-"]{
-    float: left;
+.col-lg-1 {
+  width: 8.33%;
+}
+.col-lg-2 {
+  width: 16.66%;
+}
+.col-lg-3 {
+  width: 25%;
+}
+.col-lg-4 {
+  width: 33.33%;
+}
+.col-lg-5 {
+  width: 41.66%;
+}
+.col-lg-6 {
+  width: 50%;
+}
+.col-lg-7 {
+  width: 38.33%;
+}
+.col-lg-8 {
+  width: 66.66%;
+}
+.col-lg-9 {
+  width: 75%;
+}
+.col-lg-10 {
+  width: 83.33%;
+}
+.col-lg-11 {
+  width: 91.66%;
+}
+.col-lg-12 {
+  width: 100%;
 }
 
-.row::after{
-   content: "";
-   clear: both;
-   display: block; 
+[class*="col-lg-"] {
+  float: left;
 }
 
-h1{
-    text-align: center;
+.row::after {
+  content: "";
+  clear: both;
+  display: block;
+}
+
+h1 {
+  text-align: center;
 }
 .img {
-    width: 100%;
+  width: 100%;
 }
 
-.rounded-circle{
-    border-radius: 50%;
+.rounded-circle {
+  border-radius: 50%;
 }
-.p5{
-    padding: 50px;
+.p5 {
+  padding: 50px;
 }
+/* Handphone */
+@media screen and (max-width: 599px) {
+}
+
 /* Tablet */
-.col-xs-1{}
+@media screen and (max-width: 600px) {
+}
 
-/* HandPhone */
-.col-s-1{}
+@media screen and (width: 768px) {
+  .col-lg-1 {
+    width: 8.33%;
+  }
+  .col-lg-2 {
+    width: 16.66%;
+  }
+  .col-lg-3 {
+    width: 25%;
+  }
+  .col-lg-4 {
+    width: 33.33%;
+  }
+  .col-lg-5 {
+    width: 41.66%;
+  }
+  .col-lg-6 {
+    width: 50%;
+  }
+  .col-lg-7 {
+    width: 38.33%;
+  }
+  .col-lg-8 {
+    width: 66.66%;
+  }
+  .col-lg-9 {
+    width: 75%;
+  }
+  .col-lg-10 {
+    width: 83.33%;
+  }
+  .col-lg-11 {
+    width: 91.66%;
+  }
+  .col-lg-12 {
+    width: 100%;
+  }
 
-@media screen and (width: 1500px) {
-    
+  [class*="col-lg-"] {
+    float: left;
+  }
 }
